tests/util/snapshots/main__util__list_mutants_in_cfg_attr_test_skip.snap
---
source: tests/util/mod.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/lib.rs:18:5: replace double -> usize with 0
src/lib.rs:18:5: replace double -> usize with 1
src/lib.rs:18:7: replace * with + in double
src/lib.rs:18:7: replace * with / in double

