tests/util/snapshots/main__util__list_mutants_in_cfg_attr_test_skip_json.snap
---
source: tests/util/mod.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/lib.rs",
    "function": {
      "function_name": "double",
      "return_type": "-> usize",
      "span": {
        "end": {
          "column": 2,
          "line": 19
        },
        "start": {
          "column": 1,
          "line": 16
        }
      }
    },
    "genre": "FnValue",
    "package": "cargo-mutants-testdata-cfg-attr-test-skip",
    "replacement": "0",
    "span": {
      "end": {
        "column": 10,
        "line": 18
      },
      "start": {
        "column": 5,
        "line": 18
      }
    }
  },
  {
    "file": "src/lib.rs",
    "function": {
      "function_name": "double",
      "return_type": "-> usize",
      "span": {
        "end": {
          "column": 2,
          "line": 19
        },
        "start": {
          "column": 1,
          "line": 16
        }
      }
    },
    "genre": "FnValue",
    "package": "cargo-mutants-testdata-cfg-attr-test-skip",
    "replacement": "1",
    "span": {
      "end": {
        "column": 10,
        "line": 18
      },
      "start": {
        "column": 5,
        "line": 18
      }
    }
  },
  {
    "file": "src/lib.rs",
    "function": {
      "function_name": "double",
      "return_type": "-> usize",
      "span": {
        "end": {
          "column": 2,
          "line": 19
        },
        "start": {
          "column": 1,
          "line": 16
        }
      }
    },
    "genre": "BinaryOperator",
    "package": "cargo-mutants-testdata-cfg-attr-test-skip",
    "replacement": "+",
    "span": {
      "end": {
        "column": 8,
        "line": 18
      },
      "start": {
        "column": 7,
        "line": 18
      }
    }
  },
  {
    "file": "src/lib.rs",
    "function": {
      "function_name": "double",
      "return_type": "-> usize",
      "span": {
        "end": {
          "column": 2,
          "line": 19
        },
        "start": {
          "column": 1,
          "line": 16
        }
      }
    },
    "genre": "BinaryOperator",
    "package": "cargo-mutants-testdata-cfg-attr-test-skip",
    "replacement": "/",
    "span": {
      "end": {
        "column": 8,
        "line": 18
      },
      "start": {
        "column": 7,
        "line": 18
      }
    }
  }
]
