tests/util/snapshots/main__util__list_mutants_in_factorial_json.snap
---
source: tests/util/mod.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "main",
      "return_type": "",
      "span": {
        "end": {
          "column": 2,
          "line": 5
        },
        "start": {
          "column": 1,
          "line": 1
        }
      }
    },
    "genre": "FnValue",
    "name": "src/bin/factorial.rs:2:5: replace main with ()",
    "package": "cargo-mutants-testdata-factorial",
    "replacement": "()",
    "span": {
      "end": {
        "column": 6,
        "line": 4
      },
      "start": {
        "column": 5,
        "line": 2
      }
    }
  },
  {
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "end": {
          "column": 2,
          "line": 13
        },
        "start": {
          "column": 1,
          "line": 7
        }
      }
    },
    "genre": "FnValue",
    "name": "src/bin/factorial.rs:8:5: replace factorial -> u32 with 0",
    "package": "cargo-mutants-testdata-factorial",
    "replacement": "0",
    "span": {
      "end": {
        "column": 6,
        "line": 12
      },
      "start": {
        "column": 5,
        "line": 8
      }
    }
  },
  {
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "end": {
          "column": 2,
          "line": 13
        },
        "start": {
          "column": 1,
          "line": 7
        }
      }
    },
    "genre": "FnValue",
    "name": "src/bin/factorial.rs:8:5: replace factorial -> u32 with 1",
    "package": "cargo-mutants-testdata-factorial",
    "replacement": "1",
    "span": {
      "end": {
        "column": 6,
        "line": 12
      },
      "start": {
        "column": 5,
        "line": 8
      }
    }
  },
  {
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "end": {
          "column": 2,
          "line": 13
        },
        "start": {
          "column": 1,
          "line": 7
        }
      }
    },
    "genre": "BinaryOperator",
    "name": "src/bin/factorial.rs:10:11: replace *= with += in factorial",
    "package": "cargo-mutants-testdata-factorial",
    "replacement": "+=",
    "span": {
      "end": {
        "column": 13,
        "line": 10
      },
      "start": {
        "column": 11,
        "line": 10
      }
    }
  },
  {
    "file": "src/bin/factorial.rs",
    "function": {
      "function_name": "factorial",
      "return_type": "-> u32",
      "span": {
        "end": {
          "column": 2,
          "line": 13
        },
        "start": {
          "column": 1,
          "line": 7
        }
      }
    },
    "genre": "BinaryOperator",
    "name": "src/bin/factorial.rs:10:11: replace *= with /= in factorial",
    "package": "cargo-mutants-testdata-factorial",
    "replacement": "/=",
    "span": {
      "end": {
        "column": 13,
        "line": 10
      },
      "start": {
        "column": 11,
        "line": 10
      }
    }
  }
]
